--- a/datasets/condition_occurence/pbt_aspects.yml
+++ b/datasets/condition_occurence/pbt_aspects.yml
@@ -3,22 +3,22 @@ schema:
   type: struct
   fields:
   - name: CONDITION_OCCURRENCE_ID
+    type: integer
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: person_id
     type: long
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PERSON_ID
+  - name: target_concept_id
     type: long
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CONDITION_CONCEPT_ID
-    type: long
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -52,8 +52,8 @@ schema:
       mappings: []
       tags: []
   - name: CONDITION_TYPE_CONCEPT_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -66,22 +66,22 @@ schema:
       mappings: []
       tags: []
   - name: PROVIDER_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: VISIT_OCCURRENCE_ID
-    type: long
+    type: integer
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: VISIT_DETAIL_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -95,7 +95,7 @@ schema:
       tags: []
   - name: CONDITION_SOURCE_CONCEPT_ID
     type: long
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -108,8 +108,8 @@ schema:
       mappings: []
       tags: []
   - name: CONDITION_STATUS_CONCEPT_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
