--- a/datasets/observation_period/pbt_aspects.yml
+++ b/datasets/observation_period/pbt_aspects.yml
@@ -3,13 +3,13 @@ schema:
   type: struct
   fields:
   - name: OBSERVATION_PERIOD_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PERSON_ID
+  - name: person_id
     type: long
     nullable: true
     metadata:
@@ -17,22 +17,22 @@ schema:
       mappings: []
       tags: []
   - name: OBSERVATION_PERIOD_START_DATE
-    type: date
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: OBSERVATION_PERIOD_END_DATE
-    type: date
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PERIOD_TYPE_CONCEPT_ID
-    type: long
-    nullable: true
+  - name: period_type_concept_id
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
