--- a/datasets/visit_occurence/pbt_aspects.yml
+++ b/datasets/visit_occurence/pbt_aspects.yml
@@ -3,13 +3,13 @@ schema:
   type: struct
   fields:
   - name: VISIT_OCCURRENCE_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PERSON_ID
+  - name: person_id
     type: long
     nullable: true
     metadata:
@@ -17,8 +17,8 @@ schema:
       mappings: []
       tags: []
   - name: VISIT_CONCEPT_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -52,21 +52,21 @@ schema:
       mappings: []
       tags: []
   - name: VISIT_TYPE_CONCEPT_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PROVIDER_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CARE_SITE_ID
-    type: long
+    type: integer
     nullable: true
     metadata:
       description: ''
@@ -80,15 +80,15 @@ schema:
       mappings: []
       tags: []
   - name: VISIT_SOURCE_CONCEPT_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ADMITTING_SOURCE_CONCEPT_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -101,8 +101,8 @@ schema:
       mappings: []
       tags: []
   - name: DISCHARGE_TO_CONCEPT_ID
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -115,7 +115,7 @@ schema:
       mappings: []
       tags: []
   - name: PRECEDING_VISIT_OCCURRENCE_ID
-    type: long
+    type: integer
     nullable: true
     metadata:
       description: ''
