Standardize dataset field types and add VISIT_OCCURRENCE_COST field

--- a/datasets/assign_all_visit_ids/pbt_aspects.yml
+++ b/datasets/assign_all_visit_ids/pbt_aspects.yml
@@ -72,3 +72,10 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: VISIT_OCCURRENCE_COST
+    type: double
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
